Removed errors